--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
     <div class="info-box">
         <h2>Login Account</h2>
-        <form method="POST" action="page1.html">
+        <form method="POST" action="ตอนที่1.html">
         <img src="login.png" alt="Login Image"> <!-- เปลี่ยน 'your_image.jpg' เป็นที่อยู่ของรูปภาพที่คุณต้องการใช้ -->
                 <input type="text" id="name" name="name" required>
                 <input type="Email" id="Email" name="Email" required>
